- changed to 2 horizontal menu layout - fixed a few layout issues

--- a/LoLReplaySite/lolreplaysite/static/sass/main.scss
+++ b/LoLReplaySite/lolreplaysite/static/sass/main.scss
@@ -10,55 +10,76 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	padding: 0;
 }
 
+
 body {
-	font-family: Arial;
+	font-family: "Consolas", "Monaco", "Lucida Console";
 	color: $orange;
 	background-color: $background-color;
+	
 	&>div {
 		margin: auto;
-		width: 50em;
+		width: 47em;
 		overflow: auto;
 		height: auto;
-	}
-	&>div.login {
-		margin: auto;
-		width: 20em;
 		
-		input[type='text'], input[type='password'] {
-			width: 15em;
+		&>img.logo {
+			display: inline-block;
+			height: 5em;
+			width: 12em;
+			border: 1px solid white;
+			margin-right: 1em;
 		}
-		a {
-			color: $light-blue;
+		&.login {
+			margin: auto;
+			width: 20em;
+			
+			input[type='text'], input[type='password'] {
+				width: 15em;
+			}
+			a {
+				color: $light-blue;
+			}
+			em {
+				color: red;
+			}
 		}
-		em {
-			color: red;
-		}
+	}
+	
+}
+
+
+#user_bar {
+	$margin-top-bot: 1em;
+	$padding-top-bot: 0.3em;
+	border-top: 1px solid $orange;
+	border-bottom: 1px solid $orange;
+	overflow: auto;
+	margin: $margin-top-bot 0 $margin-top-bot 0;
+	padding: $padding-top-bot 0 $padding-top-bot 0;
+	&>li {
+		display: inline-block;
+	}
+	.mail_icon {
+		height:1.2em;
+		vertical-align: bottom;
+	}
+	&>span {
+		float:right;
+	}
+	
+	a {
+		color: $orange;
+		text-decoration: none;
+		font-size: 1em;
 	}
 }
 
 
 
 ul {
-	&#user_bar {
-		$margin-top-bot: 1em;
-		$padding-top-bot: 0.3em;
-		border-top: 1px solid $orange;
-		border-bottom: 1px solid $orange;
-		overflow: auto;
-		margin: $margin-top-bot 0 $margin-top-bot 0;
-		 
-		padding: $padding-top-bot 0 $padding-top-bot 0;
-		li {
-			float:left;
-		}
-		a {
-			color: $orange;
-			text-decoration: none;
-			font-size: 1em;
-		}
-	}
 	&#main_menu {
-		float: left;
+		display:inline-block;
+		// float: left;
 		list-style: none;
 		
 		&>li {
@@ -79,11 +100,11 @@ ul {
 				display: inline-block;
 				text-decoration: none;
 				
-				border: 2px solid $gray;
+				border: 1px solid $gray;
 				color: $gray;
 				
 				&:hover {
-					border: 2px solid $orange;
+					border: 1px solid $orange;
 					color: $orange;
 				}
 				
@@ -92,7 +113,7 @@ ul {
 				}
 				
 				&.active_tab {
-					border: 2px solid $orange;
+					border: 1px solid $orange;
 					color: $orange;
 				}
 			}
@@ -100,23 +121,21 @@ ul {
 	}
 	/* replays */
 	&#replay_list {
-		width: 37.5em;
 		list-style: none;
-		overflow: auto;
-		
 		&>li {
-			padding: 1em 1em 1em 1em;
+			padding: 0.5em 0em 0.5em 0em;
 			overflow: auto;
 			
-			&.even {
-				background-color: black;
-			}
-			
 			&:first-child {
-				margin-top: 0;
+				padding-top: 0;
 			}
-			
+			&:last-child {
+				padding-bottom: 0;
+			}
 			&>div {
+				.replay_title {
+					font-weight: bold;
+				}
 				&>div.upload_info {
 					float: right;
 					
@@ -154,8 +173,8 @@ div.content {
 	float: left;
 	border: 2px $orange solid;
 	margin-top: 1em;
-	/*padding-top: 0.5em;
-	padding-bottom: 0.5em;*/
+	padding: 1em;
+	width: 43em + 1em;
 }
 	
 
